--- a/perfil.html
+++ b/perfil.html
@@ -810,7 +810,7 @@ function getPokemonRole(pokemonKey) {
         'cramorant', 'crustle', 'darkrai', 'decidueye', 'delphox',
         'dhelmise', 'dodrio', 'dragapult', 'dragonite', 'duraludon',
         'eldegoss', 'empoleon', 'espeon', 'falinks', 'garchomp',
-        'gardevoir', 'gengar', 'glaceon', 'goodra', 'greninja',
+        'gardevoir', 'gengar', 'glaceon', 'goodra', 'greedent', 'greninja',
         'gyarados', 'hooh', 'hoopa', 'inteleon', 'lapras',
         'latias', 'latios', 'leafeon', 'lucario', 'machamp',
         'mamoswine', 'megacharizardx', 'megalucario', 'metagross', 'meowscara',
