--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Guarini e-sport</title>
   <link rel="icon" href="favicon.png" type="image/png">
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="noticias.css">
+  <link rel="stylesheet" href="./noticias/noticias.css">
   <link rel="stylesheet" href="videos.css">
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#ffad00">
@@ -38,15 +38,15 @@
       <!-- Navegação Desktop - Esquerda -->
       <nav class="nav-group left-nav">
         <ul>
-          <li><a href="loja.html">Loja</a></li>
-          <li><a href="sobre.html">Sobre</a></li>
+          <li><a href="./loja/loja.html">Loja</a></li>
+          <li><a href="./sobre/sobre.html">Sobre</a></li>
         </ul>
       </nav>
       
       <!-- Logo Central -->
       <div class="logo-center">
         <a href="index.html" aria-label="Início" class="ativo">
-          <img src="./logos/Guarini.png" alt="Guarini e-sport" class="header-logo">
+          <img src="./img-site/Guarini.png" alt="Guarini e-sport" class="header-logo">
         </a>
       </div>
 
@@ -69,9 +69,9 @@
       <nav class="mobile-menu">
         <ul>
           <li><a href="index.html" class="ativo">Início</a></li>
-          <li><a href="sobre.html">Sobre</a></li>
+          <li><a href="./sobre/sobre.html">Sobre</a></li>
           <li><a href="equipes.html">Times</a></li>
-          <li><a href="loja.html">Loja</a></li>
+          <li><a href="./loja/loja.html">Loja</a></li>
           <li><a href="material.html">Material</a></li>
           <li><a href="contato.html">Contato</a></li>
         </ul>
@@ -92,7 +92,7 @@
         <span>Olá, visitante!</span>
       </div>
       <ul class="user-dropdown-list">
-        <li><a href="perfil.html" id="perfilLink">Perfil</a></li>
+        <li><a href="./perfil/perfil.html" id="perfilLink">Perfil</a></li>
         <li><a href="#" id="authLink">Login</a></li>
       </ul>
     </div>
@@ -137,7 +137,7 @@
             <div class="noticia-conteudo-horizontal">
               <h3>Guarini vence Fire Wall</h3>
               <p>Vitória importante da Guarini</p>
-              <a href="noticia5.html#noticia5" class="noticia-link">Leia mais</a>
+              <a href="./noticias/noticia5.html#noticia5" class="noticia-link">Leia mais</a>
             </div>
           </div>
 
@@ -148,7 +148,7 @@
             <div class="noticia-conteudo-horizontal">
               <h3>Guarini segue firme no topo</h3>
               <p>Guarini vence a Cálice Real e entra no G4.</p>
-              <a href="noticia4.html#noticia4" class="noticia-link">Leia mais</a>
+              <a href="./noticias/noticia4.html#noticia4" class="noticia-link">Leia mais</a>
             </div>
           </div>
 
@@ -159,7 +159,7 @@
             <div class="noticia-conteudo-horizontal">
               <h3>Mais uma vitória da Guarini!</h3>
               <p>Guarini vence a Amazon e garante a terceira vitória seguida no Brasileirão Unite!</p>
-              <a href="noticia3.html#noticia3" class="noticia-link">Leia mais</a>
+              <a href="./noticias/noticia3.html#noticia3" class="noticia-link">Leia mais</a>
             </div>
           </div>
         </div>
@@ -173,7 +173,7 @@
             <div class="noticia-conteudo-horizontal">
               <h3>Guarini vence mais uma!</h3>
               <p>Segunda vitória seguida no Brasileirão assumindo o 3º lugar na tabela.</p>
-              <a href="noticia2.html#noticia2" class="noticia-link">Leia mais</a>
+              <a href="./noticias/noticia2.html#noticia2" class="noticia-link">Leia mais</a>
             </div>
           </div>
 
@@ -184,7 +184,7 @@
             <div class="noticia-conteudo-horizontal">
               <h3>Guarini vence Kingdravôs</h3>
               <p>Nossa equipe conquistou a primeira vitória pelo brasileirão série C.</p>
-              <a href="noticia1.html#noticia1" class="noticia-link">Leia mais</a>
+              <a href="./noticias/noticia1.html#noticia1" class="noticia-link">Leia mais</a>
             </div>
           </div>
         </div>
