--- a/loja/loja.html
+++ b/loja/loja.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Confira os produtos oficiais da Guariní e-sport na nossa loja: camisas, bonés, mousepads e muito mais." />
   <title>Loja Guariní e-sport</title>
-  <link rel="icon" href="favicon.png" type="image/png" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="icon" href="../favicon.png" type="image/png" />
+  <link rel="stylesheet" href="../style.css" />
   <div id="google_translate_element"></div>
 
 <script type="text/javascript">
@@ -40,15 +40,15 @@ function googleTranslateElementInit() {
       <!-- Navegação Desktop - Esquerda -->
       <nav class="nav-group left-nav">
         <ul>
-          <li><a href="loja.html">Loja</a></li>
-          <li><a href="sobre.html">Sobre</a></li>
+          <li><a href="./loja/loja.html">Loja</a></li>
+          <li><a href="../sobre/sobre.html">Sobre</a></li>
         </ul>
       </nav>
       
       <!-- Logo Central -->
       <div class="logo-center">
-        <a href="index.html" aria-label="Início" class="ativo">
-          <img src="./logos/Guarini.png" alt="Guariní e-sport" class="header-logo">
+        <a href="../index.html" aria-label="Início" class="ativo">
+          <img src="../img-site/Guarini.png" alt="Guariní e-sport" class="header-logo">
         </a>
       </div>
 
