att caminho dos perfis

--- a/index.html
+++ b/index.html
@@ -632,7 +632,7 @@
 
     // Função para fazer login
     function handleLogin() {
-      window.location.href = 'login.html';
+      window.location.href = '/login/login.html';
     }
 
     // Função para fazer logout
