--- a/login/registro.html
+++ b/login/registro.html
@@ -7,7 +7,7 @@
 <style>
   body {
     font-family: Arial, sans-serif;
-    background: url('background.jpg');
+    background: url('/img-site/background.jpg');
     background-size: cover;
     display: flex;
     align-items: center;
@@ -141,7 +141,7 @@ function googleTranslateElementInit() {
   <button id="btnRegistrar">Criar Conta</button>
   
   <div class="back-link">
-    <p>Já tem uma conta? <a href="login.html">Fazer login</a></p>
+    <p>Já tem uma conta? <a href="/login/login.html">Fazer login</a></p>
   </div>
 </div>
 
