--- a/loja/loja.html
+++ b/loja/loja.html
@@ -84,91 +84,91 @@ function googleTranslateElementInit() {
     <h2>Loja Oficial Guariní</h2>
     <section class="produtos">
       <article class="produto">
-        <img src="./shop/camisa.jpg" alt="Camisa Oficial Guariní" />
+        <img src="./img-shop/camisa.jpg" alt="Camisa Oficial Guariní" />
         <h3>Camisa Oficial</h3>
         <p class="preco">Em breve</p>
         <button type="button" class="btn-comprar" disabled>Em breve</button>
       </article>
 
       <article class="produto">
-        <img src="./shop/mochila.jpg" alt="Mochila Guariní" />
+        <img src="./img-shop/mochila.jpg" alt="Mochila Guariní" />
         <h3>Mochila</h3>
         <p class="preco">$ 47,70</p>
         <button type="button" class="btn-comprar" data-link="https://streamlabs.com/guarini_esports/merch/5571573">Comprar</button>
       </article>
 
       <article class="produto">
-        <img src="./shop/agenda.jpg" alt="Caderno capa dura Guariní" />
+        <img src="./img-shop/agenda.jpg" alt="Caderno capa dura Guariní" />
         <h3>Meu caderno de capa dura</h3>
         <p class="preco">$ 21,00</p>
         <button type="button" class="btn-comprar" data-link="https://streamlabs.com/guarini_esports/merch/5023076">Comprar</button>
       </article>
 
       <article class="produto">
-        <img src="./shop/caderno.jpg" alt="Caderno espiral Guariní" />
+        <img src="./img-shop/caderno.jpg" alt="Caderno espiral Guariní" />
         <h3>Caderno espiral</h3>
         <p class="preco">$ 20,00</p>
         <button type="button" class="btn-comprar" data-link="https://streamlabs.com/guarini_esports/merch/5609860">Comprar</button>
       </article>
 
       <article class="produto">
-        <img src="./shop/garrafinha.jpg" alt="Garrafa de água Guariní" />
+        <img src="./img-shop/garrafinha.jpg" alt="Garrafa de água Guariní" />
         <h3>Garrafa de água de aço inoxidável</h3>
         <p class="preco">$ 30,00</p>
         <button type="button" class="btn-comprar" data-link="https://streamlabs.com/guarini_esports/merch/5023084">Comprar</button>
       </article>    
 
       <article class="produto">
-        <img src="./shop/caneca.jpg" alt="Caneca Guariní" />
+        <img src="./img-shop/caneca.jpg" alt="Caneca Guariní" />
         <h3>Caneca de viagem com alça</h3>
         <p class="preco">$ 29,00</p>
         <button type="button" class="btn-comprar" data-link="https://streamlabs.com/guarini_esports/merch/5023087">Comprar</button>
       </article>  
 
       <article class="produto">
-        <img src="./shop/copo-canudo.jpg" alt="Copo de aço Guariní" />
+        <img src="./img-shop/copo-canudo.jpg" alt="Copo de aço Guariní" />
         <h3>Copo de aço inoxidável</h3>
         <p class="preco">$ 31,00</p>
         <button type="button" class="btn-comprar" data-link="https://streamlabs.com/guarini_esports/merch/5609869">Comprar</button>
       </article> 
 
       <article class="produto">
-        <img src="./shop/copo.jpg" alt="Copo Guariní" />
+        <img src="./img-shop/copo.jpg" alt="Copo Guariní" />
         <h3>Copo de vinho</h3>
         <p class="preco">$ 26,00</p>
         <button type="button" class="btn-comprar" data-link="https://streamlabs.com/guarini_esports/merch/5609865">Comprar</button>
       </article> 
 
       <article class="produto">
-        <img src="./shop/apple-arte.jpg" alt="Capa Snap para iPhone Guariní" />
+        <img src="./img-shop/apple-arte.jpg" alt="Capa Snap para iPhone Guariní" />
         <h3>Capa Snap para iPhone</h3>
         <p class="preco">$ 22,00</p>
         <button type="button" class="btn-comprar" data-link="https://streamlabs.com/guarini_esports/merch/5609863">Comprar</button>
       </article> 
 
       <article class="produto">
-        <img src="./shop/samgung-arte.jpg" alt="Capa Snap para Samsung Guariní" />
+        <img src="./img-shop/samgung-arte.jpg" alt="Capa Snap para Samsung Guariní" />
         <h3>Capa Snap para Samsung</h3>
         <p class="preco">$ 22,00</p>
          <button type="button" class="btn-comprar" data-link="https://streamlabs.com/guarini_esports/merch/5571581">Comprar</button>
       </article> 
 
       <article class="produto">
-        <img src="./shop/apple-transparente.jpg" alt="Capa transparente para iPhone Guariní" />
+        <img src="./img-shop/apple-transparente.jpg" alt="Capa transparente para iPhone Guariní" />
         <h3>Capa transparente para iPhone</h3>
         <p class="preco">$ 18,00</p>
         <button type="button" class="btn-comprar" data-link="https://streamlabs.com/guarini_esports/merch/5571559">Comprar</button>
       </article>
 
       <article class="produto">
-        <img src="./shop/samsung-transparente.jpg" alt="Capa transparente para Samsung Guariní" />
+        <img src="./img-shop/samsung-transparente.jpg" alt="Capa transparente para Samsung Guariní" />
         <h3>Capa transparente para Samsung</h3>
         <p class="preco">$ 17,00</p>
         <button type="button" class="btn-comprar" data-link="https://streamlabs.com/guarini_esports/merch/5571557">Comprar</button>
       </article> 
 
       <article class="produto">
-        <img src="./shop/stick.jpg" alt="Adesivos holográficos Kiss-Cut Guariní" />
+        <img src="./img-shop/stick.jpg" alt="Adesivos holográficos Kiss-Cut Guariní" />
         <h3>Adesivos holográficos Kiss-Cut</h3>
         <p class="preco">$ 11,00</p>
         <button type="button" class="btn-comprar" data-link="https://streamlabs.com/guarini_esports/merch/5571571">Comprar</button>
