--- a/noticias/noticia1.html
+++ b/noticias/noticia1.html
@@ -6,7 +6,7 @@
   <title>Guariní vence a Kingdravôs | Guariní e-sport</title>
   <meta name="description" content="Nossa equipe conquistou o primeiro lugar no torneio regional de Pokémon Unite">
   <link rel="icon" href="favicon.png" type="image/png">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../style.css">
   <link rel="stylesheet" href="noticias.css">
 </head>
   <body>
@@ -17,7 +17,7 @@
         <span>19 de Agosto, 2025</span> • 
         <span>Por Nathália "Nath" Lima</span>
       </div>
-      <img src="./img-site/noticia1-grande.jpg" alt="Vitória" class="noticia-imagem">
+      <img src="./img-noticias/noticia1-grande.jpg" alt="Vitória" class="noticia-imagem">
     </header>
     
     <article class="noticia-conteudo">
@@ -32,7 +32,7 @@
       <p>Durante a transmissão, o comentarista Leaum resumiu bem o momento: "É nítida a evolução da equipe da Guariní."</p>
 
       <p>Agora, o foco já está na 3ª rodada do Brasileirão Unite, onde enfrentaremos a Aeos Red na quinta-feira (21), às 21h. Mais uma batalha decisiva está chegando e contamos com a torcida de todos vocês! #GoGuariní"</p>
-      <a href="index.html" class="noticia-voltar">← Voltar para o início</a>
+      <a href="../index.html" class="noticia-voltar">← Voltar para o início</a>
     </article>
   </div>
 </body>
