--- a/perfil/perfil-view.html
+++ b/perfil/perfil-view.html
@@ -18,13 +18,13 @@
     <div class="header-wrapper">
       <nav class="nav-group left-nav">
         <ul>
-          <li><a href="loja.html">Loja</a></li>
-          <li><a href="sobre.html">Sobre</a></li>
+          <li><a href="../loja/loja.html">Loja</a></li>
+          <li><a href="../sobre/sobre.html">Sobre</a></li>
         </ul>
       </nav>
       
       <div class="logo-center">
-        <a href="index.html" aria-label="Início">
+        <a href="../index.html" aria-label="Início">
           <img src="../img-site/Guarini.png" alt="Guarini e-sport" class="header-logo">
         </a>
       </div>
@@ -32,7 +32,7 @@
       <nav class="nav-group right-nav">
         <ul>
           <li><a href="equipes.html">Times</a></li>
-          <li><a href="material.html">Material</a></li>
+          <li><a href="../material.html">Material</a></li>
         </ul>
       </nav>
       
