--- a/noticias/noticia3.html
+++ b/noticias/noticia3.html
@@ -6,7 +6,7 @@
   <title>Guariní vence a Amazon e garante a terceira vitória seguida no Brasileirão Unite!</title>
   <meta name="description" content="Guariní vence a Aeos Red e se firma no top 3 da tabela">
   <link rel="icon" href="favicon.png" type="image/png">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../style.css">
   <link rel="stylesheet" href="noticias.css">
 </head>
   <body>
@@ -17,7 +17,7 @@
         <span>27 de Agosto, 2025</span> • 
         <span>Por Nathália "Nath" Lima</span>
       </div>
-      <img src="./img-site/noticia3-grande.jpg" alt="Vitória" class="noticia-imagem">
+      <img src="./img-noticias/noticia3-grande.jpg" alt="Vitória" class="noticia-imagem">
     </header>
     
     <article class="noticia-conteudo">
@@ -36,7 +36,7 @@
       <p>Confira a tabela geral do Brasileirão em: <a href="https://battlefy.com/liga-dos-campe%C3%B5es-pok%C3%A9mon/8%C2%BA-brasileir%C3%A3o/68856c2a61d98e0075badfb0/stage/68856c6573a8a10059b47a0b/results" class="news-button">
                     Ver Tabela Completa
                 </a></p>
-      <a href="index.html" class="noticia-voltar">← Voltar para o início</a>
+      <a href="../index.html" class="noticia-voltar">← Voltar para o início</a>
     </article>
   </div>
 </body>
