--- a/perfil/perfil.html
+++ b/perfil/perfil.html
@@ -549,7 +549,7 @@ function getPokemonRole(pokemonKey) {
   // Função para editar build (redireciona para calculadora)
   function editarBuild(buildId) {
     localStorage.setItem('loadBuildId', buildId);
-    window.location.href = 'damage-calculator.html';
+    window.location.href = '../damage-calculator.html';
   }
 
   // Função para excluir build
