--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Site oficial da equipe Guarini e-sport">
   <title>Guarini e-sport</title>
-  <link rel="icon" href="favicon.png" type="image/png">
+  <link rel="icon" href="./img-site/favicon.png" type="image/png">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="./noticias/noticias.css">
   <link rel="stylesheet" href="./videos/videos.css">
@@ -46,7 +46,7 @@
       <!-- Logo Central -->
       <div class="logo-center">
         <a href="index.html" aria-label="Início" class="ativo">
-          <img src="./img-site/Guarini.png" alt="Guarini e-sport" class="header-logo">
+          <img src="./img-site/grn-logo.png" alt="Guarini e-sport" class="header-logo">
         </a>
       </div>
 
