--- a/sobre/sobre.html
+++ b/sobre/sobre.html
@@ -48,7 +48,7 @@ function googleTranslateElementInit() {
       
       <div class="logo-center">
         <a href="../index.html" aria-label="Início">
-          <img src="../img-site/Guarini.png" alt="Guariní e-sport" class="header-logo">
+          <img src="../img-site/grn-logo.png" alt="Guariní e-sport" class="header-logo">
         </a>
       </div>
       
@@ -131,7 +131,7 @@ function googleTranslateElementInit() {
         <a href="../index.html" class="btn-comprar">Voltar para Início</a>
       </div>
       <div class="sobre-imagem">
-        <img src="./img-site/Guarini.png" alt="Imagem representativa da Guariní e-sport" />
+        <img src="./img-site/grn-logo.png" alt="Imagem representativa da Guariní e-sport" />
       </div>
     </section>
   </main>
