update top build no index

--- a/perfil/perfil-view.html
+++ b/perfil/perfil-view.html
@@ -114,7 +114,7 @@
           <!-- EMAIL REMOVIDO - não será exibido -->
           
           <div class="perfil-player-id-container">
-            <p class="perfil-player-id-label">Player ID:</p>
+            <p class="perfil-player-id-label">Unite ID:</p>
             <p class="perfil-player-id-display" id="playerIdDisplay">-</p>
           </div>
         </div>
