--- a/perfil/perfil.html
+++ b/perfil/perfil.html
@@ -120,7 +120,7 @@
           <p class="perfil-email" id="perfilEmail">usuario@email.com</p>
           <!-- Player ID Section -->
           <div class="perfil-player-id-container">
-            <p class="perfil-player-id-label">Player ID:</p>
+            <p class="perfil-player-id-label">Unite ID:</p>
             
             <!-- Exibição do ID (quando já cadastrado) -->
             <p class="perfil-player-id-display" id="playerIdDisplay" style="display: none;">-</p>
