correção do rank

--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@ function createTopBuildCard(build, rank, creatorData) {
   
   // Rank badge
   const rankClass = `rank-${rank}`;
-  const rankEmoji = rank === 1 ? '🥇' : rank === 2 ? '🥈' : rank === 3 ? '🥉' : `#${rank}`;
+  const rankEmoji = `#${rank}`;
   
   return `
     <div class="top-build-card">
