--- a/loja/loja.html
+++ b/loja/loja.html
@@ -56,7 +56,7 @@ function googleTranslateElementInit() {
       <!-- Navegação Desktop - Direita -->
       <nav class="nav-group right-nav">
         <ul>
-          <li><a href="equipes.html">Times</a></li>
+          <li><a href="../groups/groups.html">Jogos</a></li>
           <li><a href="../material.html">Material</a></li>
         </ul>
       
