--- a/perfil/perfil.html
+++ b/perfil/perfil.html
@@ -34,7 +34,7 @@
       <!-- Navegação Desktop - Direita -->
       <nav class="nav-group right-nav">
         <ul>
-          <li><a href="equipes.html">Times</a></li>
+          <li><a href="../groups/groups.html">Jogo</a></li>
           <li><a href="../material.html">Material</a></li>
         </ul>
       </nav>
