--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <!-- Navegação Desktop - Direita -->
       <nav class="nav-group right-nav">
         <ul>
-          <li><a href="equipes.html">Times</a></li>
+          <li><a href="./groups/groups.html">Jogos</a></li>
           <li><a href="material.html">Material</a></li>
         </ul>
       </nav>
