--- a/sobre/sobre.html
+++ b/sobre/sobre.html
@@ -54,7 +54,7 @@ function googleTranslateElementInit() {
       
       <nav class="nav-group right-nav">
         <ul>
-          <li><a href="equipes.html">Times</a></li>
+          <li><a href="../groups/groups.html">Jogos</a></li>
           <li><a href="../material.html">Material</a></li>
         </ul>
       </nav>
