--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <nav class="nav-group right-nav">
         <ul>
           <li><a href="./groups/groups.html">Jogos</a></li>
-          <li><a href="material.html">Material</a></li>
+          <li><a href="./contato/contato.html">Contato</a></li>
         </ul>
       </nav>
       
