--- a/loja/loja.html
+++ b/loja/loja.html
@@ -57,7 +57,7 @@ function googleTranslateElementInit() {
       <nav class="nav-group right-nav">
         <ul>
           <li><a href="../groups/groups.html">Jogos</a></li>
-          <li><a href="../material.html">Material</a></li>
+          <li><a href="../contato/contato.html">Contato</a></li>
         </ul>
       
       <!-- Botão Menu Mobile -->
