--- a/material.html
+++ b/material.html
@@ -92,7 +92,7 @@ function googleTranslateElementInit() {
       <!-- Navegação Desktop - Direita -->
       <nav class="nav-group right-nav">
         <ul>
-          <li><a href="../groups/groups.html">Jogo</a></li>
+          <li><a href="../groups/groups.html">Jogos</a></li>
           <li><a href="material.html" class="ativo">Material</a></li>
         </ul>
       </nav>
