--- a/sobre/sobre.html
+++ b/sobre/sobre.html
@@ -55,7 +55,7 @@ function googleTranslateElementInit() {
       <nav class="nav-group right-nav">
         <ul>
           <li><a href="../groups/groups.html">Jogos</a></li>
-          <li><a href="../material.html">Material</a></li>
+          <li><a href="../contato/contato.html">Contato</a></li>
         </ul>
       </nav>
       
