--- a/login/login.html
+++ b/login/login.html
@@ -18,7 +18,7 @@
   html,body{height:100%;}
   body {
     font-family: Arial, sans-serif;
-    background: url('/img-site/background.jpg') no-repeat center center fixed;
+    background: url('../img-site/background.png') no-repeat center center fixed;
     background-size: cover;
     margin: 0;
     min-height: 100vh;
