--- a/login/registro.html
+++ b/login/registro.html
@@ -7,7 +7,7 @@
 <style>
   body {
     font-family: Arial, sans-serif;
-    background: url('/img-site/background.jpg');
+    background: url('/img-site/background.png');
     background-size: cover;
     display: flex;
     align-items: center;
@@ -101,7 +101,6 @@ function googleTranslateElementInit() {
 }
 </script>
 
-<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 <!-- Adsense tag -->
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4262085354518962"
      crossorigin="anonymous"></script>
